<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.domij.artur.mailapp.MainActivity">


    <LinearLayout
        android:id="@+id/connectionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/loginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginEditText"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/hostEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordEditText"
                android:hint="@string/host_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/portEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/hostEditText"
                android:hint="@string/port_hint"
                android:inputType="text" />
        </RelativeLayout>

        <Button
            android:id="@+id/testConnectionButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/test_connection_button" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mailToLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/connectionLayout">

        <EditText
            android:id="@+id/mailToEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/mail_to_hint"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/putLastMailToButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/put_last_mail_to_button" />
    </LinearLayout>

    <EditText
        android:id="@+id/subjectEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mailToLayout"
        android:hint="@string/subject_hint"
        android:inputType="textEmailSubject" />

    <EditText
        android:id="@+id/bodyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sendMailButton"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/subjectEditText"
        android:layout_marginEnd="2dp"
        android:hint="@string/body_hint"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/sendMailButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/send_mail_button" />

</RelativeLayout>
